# indo-news-dataset

./: .gitignore  .gitignore.swp  Pipfile  Untitled.ipynb  berhasil_quarter1.csv  berhasil_quarter2.csv  berhasil_quarter3.csv  berhasil_quarter4.csv  berhasil_quarter5.csv  connect.py  ehe.py  get_p.py  json_aggregator.py  kompas.db  kompas2019.py  kompas_1.py  kompas_2.py  kompas_3.py  kompas_4.py  kompas_5.py  link_aggregator.py  parallel_bisnis.py  parallel_kompas.py  pertanggalan.py  pusher.py  pyproject.toml  readme.md  requirements.txt  resume_scrape.py  run_parallel_kompas.py  scrape_on_dask.py  scrape_parallel.py  scrape_this.py  scrape_this_on_steroid.py  scrape_with_dask.py  sumber.py  time_bomb.py  updater.py
csv/: 2019-08-31_kompas_p_single_50detik.csv  readme.md
scraper/: Link.py
scrapy_ver/: .gitignore  kompas.csv  readme.md  scrapy.cfg
scrapy_ver/scrapy_ver/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_ver/scrapy_ver/spiders/: kompas.py  kompas_paragraf.py
