[tool.poetry]
name = "indo-news-dataset"
version = "0.1.0"
description = "scrapy version of indo-news-dataset"
authors = ["svmihar <svmihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
bs4 = "^0.0.1"
scrapy = "^1.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
